[gd_scene load_steps=5 format=3 uid="uid://bpa4lyv6g6gov"]

[ext_resource type="Script" path="res://Scripts/principal.gd" id="1_rkwun"]
[ext_resource type="Texture2D" uid="uid://8bhtmkqprhyq" path="res://Assets/DOminOO Play.svg" id="2_hvkji"]
[ext_resource type="Texture2D" uid="uid://clwp1lw5id0g1" path="res://Assets/boutton play.svg" id="3_ftvox"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vegja"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="Principal" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_rkwun")

[node name="StartButton" type="Button" parent="."]
layout_mode = 0
offset_left = 566.0
offset_top = 368.0
offset_right = 735.0
offset_bottom = 455.0
theme_override_styles/normal = SubResource("StyleBoxFlat_vegja")
icon = ExtResource("3_ftvox")

[node name="ButtonConnexion" type="Button" parent="."]
layout_mode = 0
offset_left = 551.0
offset_top = 478.0
offset_right = 734.0
offset_bottom = 546.0
text = "Connexion"

[node name="ButtonInscription" type="Button" parent="."]
layout_mode = 0
offset_left = 551.0
offset_top = 358.0
offset_right = 731.0
offset_bottom = 422.0
text = "Inscription"

[node name="DOminOoPlay" type="Sprite2D" parent="."]
position = Vector2(649, 151)
texture = ExtResource("2_hvkji")

[node name="CanvasModulate" type="CanvasModulate" parent="."]
